added solution for combination sum2 ,and binary tree two sum